--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node":"8.9.4"
+    "node": "8.9.4"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "mongoose": "^5.0.3"
+    "mongoose": "^5.0.3",
+    "validator": "^9.4.0"
   }
 }
