--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.3",
     "validator": "^9.4.0"
   }
